--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  flutter_svg: ^0.19.1
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
@@ -22,7 +22,9 @@ dev_dependencies:
 flutter:
 
   assets:
-    - assets/images/bg_splash.png
+    - assets/images/
+    - assets/icons/
+    - assets/fonts/
 
   fonts:
     - family: SF Pro Rounded
