--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
 
   flutter_svg: ^0.19.1
   cupertino_icons: ^0.1.3
-
+  flutter_staggered_grid_view: ^0.3.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
