--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,27 +1,26 @@
 name: flutter_ui_food_delivery_app
 description: A new Flutter project.
 
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  flutter_svg: ^1.1.3
-  cupertino_icons: ^1.0.5
-  flutter_staggered_grid_view: ^0.6.2
-  
+  flutter_svg: ^2.0.9
+  cupertino_icons: ^1.0.6
+  flutter_staggered_grid_view: ^0.7.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 flutter:
-
   assets:
     - assets/images/
     - assets/icons/
