--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_svg: ^2.0.9
-  cupertino_icons: ^1.0.6
-  flutter_staggered_grid_view: ^0.7.0
+  flutter_svg: ^1.0.3
+  cupertino_icons: ^1.0.5
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.4
 
 flutter:
   assets:
